--- a/index.html
+++ b/index.html
@@ -8,9 +8,43 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-
+  <div class="form">
+    <div class="tab-header">
+      <div class="active">Registro</div>
+      <div>Ingreso</div>
+    </div>
+    <div class="tab-content">
+      <div class="tab-body active">
+        <div class="form-element">
+          <input type="text" placeholder="Email">
+        </div>
+        <div class="form-element">
+          <input type="text" placeholder="Nombre de Usuario">
+        </div>
+        <div class="form-element">
+          <input type="password" placeholder="Contraseña">
+        </div>
+        <div class="form-element">
+          <button>Registrate</button>
+        </div>
+      </div>
+      <div class="tab-body">
+        <div class="form-element">
+          <input type="text" placeholder="Email / Nombre de Usuario">
+        </div>
+        <div class="form-element">
+          <input type="password" placeholder="Contraseña">
+        </div>
+        <div class="form-element">
+          <input type="checkbox" id="remember_me">
+          <label for="remember_me">Recordar Datos</label>
+        </div>
+        <div class="form-element">
+          <button>Ingresar</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="effect.js"></script>
 </body>
 </html>
